fixed text alignment on mobile version

--- a/style.css
+++ b/style.css
@@ -220,9 +220,8 @@ header {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    
   }
-  header {
+  body header {
     margin-top: 1vw;
     width: 50%;
     display: flex;
@@ -230,7 +229,11 @@ header {
     margin: auto;
   }
 
-  header img {
+  body p {
+    text-align: center;
+  }
+
+  body header figure img {
     width: 90%;
     height: 90%;
     position: relative;
@@ -459,7 +462,7 @@ h1 {
     }
   }
 
-  .wrapper {
+  body .wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -477,7 +480,7 @@ h1 {
    }
 
 
-  .firstSection{
+  body .firstSection{
     font-size: 3vw;
     padding: 0px;
     width: 100%;
@@ -488,7 +491,7 @@ h1 {
     flex-direction: column;
     float: none;
   }
-  .otherSections {
+  body .otherSections {
     font-size: 3vw;
     padding: 0px;
     width: 100%;
@@ -497,7 +500,7 @@ h1 {
 
   }
 
-  .projectSections {
+  body .projectSections {
     display: flex;
     flex-direction: column;
     justify-content: center
